# Open-source-development-culture

./: .buildinfo  README.md  README.rst  functions_doc.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  functions_doc.doctree  index.doctree
.github/workflows/: docs.yml
Alice_and_Fedor/item_keeper/: README.rst  main.py
TestingMocks/: readme.md  readme.rst  requirements.txt
TestingMocks/app/: main.py  models.py  parse_csv.py  schemas.py
TestingMocks/app/routes/: files.py  users.py
TestingMocks/cli/: client.py
TestingMocks/tests/: test_client.py  test_server.py
docs/: requirements.txt
docs/source/: conf.py  index.rst
loggingirovanie/: log_server.py  logger_config.py
