[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "open-source-development-culture"
authors = [{name = "Svetlana Rudova", email = "rudovasvetlana570@gmail.com"}, {name = "Artem Pilyavin", email = "artem31093@gmail.com"}]
dynamic = ["version", "description"]